--- a/pages/myself/myself.wxml
+++ b/pages/myself/myself.wxml
@@ -5,7 +5,7 @@
       2020年工资年终奖计算器
     </view>
     <view class="padding-xs">
-      Only working hard earns money.
+      Hard working earns money.
     </view>
   </view>
 </view>
