--- a/miniprogram/pages/bonus/bonus.wxml
+++ b/miniprogram/pages/bonus/bonus.wxml
@@ -3,8 +3,8 @@
 	<view class="cu-form-group margin-top">
 		<view class="title">{{text1}}</view>
 		<input placeholder="请输入税前年终奖" bindinput="shuiQianBonus"  type="number"></input>
-    <text class="reverse text-black">反推</text>
-    <switch class="red sm" unchecked bindchange="reverse"></switch>
+    <text class="reverse text-black" >反推</text>
+    <switch class="red sm" unchecked bindchange="reverse" disabled="{{disableHideReverse}}"></switch>
 	</view>
   <view class=" text-xs padding myself">
       <text class="text-df">计算结果：</text>
@@ -23,7 +23,19 @@
 	</view>
 </form>
 
+<view class="padding-lr bg-white">
+	<view class="text-left padding" style="white-space:pre-line">剩余反推次数： {{availableCountTimes}}次
+	<text>观看广告增加<text class="text-red">10次</text>免费反推</text></view>
+</view>
 
-<view class="flex-view-item">
-    <button class="weui-btn bg-green share" open-type="share">分享朋友</button>
+<view class="padding flex  justify-between bg-white" >
+    <button class="cu-btn round circle lg bg-green" open-type="share">分享朋友</button>
+    <button class="cu-btn round circle lg bg-green" bindtap="watchAdvert" hidden="{{hideAdvert}}">观看广告</button>
+</view>
+
+
+
+
+<view class="adContainer">
+  <ad unit-id="adunit-210099d71f8acc47" ad-intervals="30"></ad>
 </view>
