--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -74,3 +74,38 @@ button::after{
 .usermotto {
   margin-top: 200px;
 }
+.ad{
+  position: flex;
+  bottom: 80%;
+}
+
+.adsec{
+  width: 90%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  margin: 10rpx auto;
+  background:rgba(255,255,255,255);
+  border-radius:6px;
+  padding: 7rpx 10rpx;
+  height: 50rpx;
+}
+.adsec icon{
+  display: flex;
+  margin-right: 10rpx;
+}
+.swiper_container {
+  height: 55rpx;
+  width: 80%;
+  line-height: 55rpx;
+  padding-left: 10rpx;
+}
+ 
+.swiper_item {
+  font-size: 25rpx;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  letter-spacing: 2px;
+}
