--- a/miniprogram/pages/salary/salary.wxss
+++ b/miniprogram/pages/salary/salary.wxss
@@ -35,3 +35,12 @@ button::after{
   font-size: 13px;
   padding-left: 14px
 }
+.confetti-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  z-index: 1000;
+}
