--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,5 +1,5 @@
 <!--index.wxml-->
-<view class='adsec'>
+<!-- <view class='adsec'>
   <icon class='iconfont icongonggao c_main fs_36'></icon>
   <text class='c_main fs_26'>公告：</text>
   <swiper class="swiper_container" autoplay="true" circular="true" interval="2000">
@@ -11,7 +11,7 @@
       </navigator>
     </block>
   </swiper>
-</view>
+</view> -->
 
 <view class="page"  xmlns:wx="http://www.w3.org/1999/xhtml"> 
     <view class="weui-panel__hd" ><text class="text-myself">请选择要计算的类别</text></view>
