--- a/miniprogram/pages/myself/myself.wxml
+++ b/miniprogram/pages/myself/myself.wxml
@@ -23,7 +23,7 @@
 
     <view class="cu-item arrow">
       <navigator class="content" target="miniProgram" app-id="wx644a4839f41d919d"  hover-class="none">
-        <text class="text-black">更多好玩的--梗大全</text>
+        <text class="text-black">更多好玩的--说词儿</text>
       </navigator>
     </view>
 
